--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -44,33 +44,28 @@
                    />
 
             <!-- Resources dropdown list -->
-
-            <!-- Old version without dividers -->
-            <!--
             <div class="input-group glossary-dropdown me-3">
                 <select name="resource" id="inputGroupSelect" class="form-select">
-                    <option selected>すべてのリソースを検索する</option>
-                    {% for resource in resources %}
-                        <option value="{{ resource }}">{{ resource }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            -->
 
-            <!-- New version without dividers -->
-            <div class="input-group glossary-dropdown me-3">
-                <select name="resource" id="inputGroupSelect" class="form-select">
+                    <!-- Main selections -->
                     <option selected>すべてのリソース</option>
-                    <option disabled>───────────</option>
                     <option>すべての用語集</option>
-                    {% for glossary in glossaries %}
-                        <option value="{{ glossary }}">- {{ glossary }}</option>
-                    {% endfor %}
-                    <option disabled>───────────</option>
                     <option>すべての翻訳</option>
-                    {% for translation in translations %}
-                        <option value="{{ translation }}">- {{ translation }}</option>
-                    {% endfor %}
+
+                    <!-- Individual glossaries -->
+                    <optgroup label="用語集">
+                        {% for glossary in glossaries %}
+                            <option value="{{ glossary }}">{{ glossary }}</option>
+                        {% endfor %}
+                    </optgroup>
+
+                    <!-- Individual translations -->
+                    <optgroup label="翻訳">
+                        {% for translation in translations %}
+                            <option value="{{ translation }}">{{ translation }}</option>
+                        {% endfor %}
+                    </optgroup>
+
                 </select>
             </div>
 
