Copy link spacing adjusted

--- a/templates/_glossary_content_table.html
+++ b/templates/_glossary_content_table.html
@@ -23,7 +23,7 @@
 
                     <!-- Link to copy source text to clipboard -->
                     <small>
-                        <a href="" id="copy-link" onclick="copyText('{{ item.source }}');">(Copy)</a>
+                        <a href="" id="copy-link" onclick="copyText('{{ item.source }}');">&nbsp;(Copy)</a>
                     </small>
                 </td>
 
@@ -33,7 +33,7 @@
 
                     <!-- Link to copy target text to clipboard -->
                     <small>
-                        <a href="" id="copy-link" onclick="copyText('{{ item.target }}');">(Copy)</a>
+                        <a href="" id="copy-link" onclick="copyText('{{ item.target }}');">&nbsp;(Copy)</a>
                     </small>
 
                         <!-- Include notes if present -->
