--- a/templates/_translation_content_table.html
+++ b/templates/_translation_content_table.html
@@ -25,7 +25,7 @@
 
                         <!-- Link to copy source text to clipboard -->
                         <small>
-                            <a href="" id="copy-link" onclick="copyText('{{ item.source }}');">(Copy)</a>
+                            <a href="" id="copy-link" onclick="copyText('{{ item.source }}');">&nbsp;(Copy)</a>
                         </small>
 
                     {% else %}
@@ -41,7 +41,7 @@
 
                         <!-- Link to copy target text to clipboard -->
                         <small>
-                            <a href="" id="copy-link" onclick="copyText('{{ item.target }}');">(Copy)</a>
+                            <a href="" id="copy-link" onclick="copyText('{{ item.target }}');">&nbsp;(Copy)</a>
                         </small>
 
                     {% else %}
