--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -37,6 +37,7 @@
             <!-- Search bar -->
             <input name="query"
                    type="search"
+                   id="search-input-field"
                    placeholder="検索クエリーを入力してください"
                    class="form-control search-bar me-3"
                    required
