--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -50,7 +50,7 @@
 
                                     <!-- Link to copy source text to clipboard -->
                                     &nbsp
-                                    <a href="#" class="table-icons" id="copy-link" onclick="copyText('{{ item.source }}');">
+                                    <a href="#" class="clipboard-icon" id="copy-link" onclick="copyText('{{ item.source }}');">
                                         {% include "_table_copy_icon.html" %}
                                     </a>
 
@@ -68,7 +68,7 @@
 
                                     <!-- Link to copy target text to clipboard -->
                                     &nbsp
-                                    <a href="" id="copy-link" onclick="copyText('{{ item.target }}');">
+                                    <a href="#" class="clipboard-icon" id="copy-link" onclick="copyText('{{ item.target }}');">
                                         {% include "_table_copy_icon.html" %}
                                     </a>
 
