--- a/templates/_glossary_content_table.html
+++ b/templates/_glossary_content_table.html
@@ -50,7 +50,7 @@
 
                 <td class="col-center-align">
 
-                    {% include "_entry_action_buttons.html" %}
+                    {% include "_entry_action_icons.html" %}
 
                 </td>
 
