--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -99,11 +99,11 @@
                                 <small>
                                     {% if item.glossary %}
 
-                                        {% include "_entry_action_buttons.html" %}
+                                        {% include "_entry_action_icons.html" %}
 
                                     {% elif item.translation %}
 
-                                        {% include "_segment_action_buttons.html" %}
+                                        {% include "_segment_action_icons.html" %}
 
                                     {% endif %}
                                 </small>
