--- a/templates/_translation_content_table.html
+++ b/templates/_translation_content_table.html
@@ -53,7 +53,7 @@
 
                 <td class="col-center-align">
 
-                    {% include "_segment_action_buttons.html" %}
+                    {% include "_segment_action_icons.html" %}
 
                 </td>
 
