--- a/templates/glossary_upload.html
+++ b/templates/glossary_upload.html
@@ -69,7 +69,7 @@
                                         <li>「(tab)」ではなく、実際のタブ文字を入力してください。</li>
                                         <li>上記フォーマット以外のエントリーは無視されます。</li>
                                     </ul>
-                                    <p>原文、訳文、備考のような2列または3列のエクセル表形式の用語集がある場合、エクセル表の内容をテキストファイルにコピーするだけで、各列のデタは自動的にタブ文字で区切られるはずです。</p>
+                                    <p>原文、訳文、備考のような2列または3列のエクセル表形式の用語集がある場合、エクセル表の内容をテキストファイルにコピーするだけで、各列のデータは自動的にタブ文字で区切られるはずです。</p>
                                 </small>
                             </div>
 
