--- a/templates/glossary_upload.html
+++ b/templates/glossary_upload.html
@@ -55,7 +55,7 @@
 
                             <div class="modal-body">
                                 <small>
-                                    <p>用語集全体をタブ区切りテキストファイル（.txt）として<br>アップロードすることができます。</p>
+                                    <p>用語集全体をタブ区切りテキストファイル（.txt）としてアップロードすることができます。</p>
                                     <p><span class="code">原文(tab)訳文(tab)備考</span></p>
                                     <p>例えば：</p>
                                     <p class="code block">
