Search spinner naming updated

--- a/templates/glossary_upload.html
+++ b/templates/glossary_upload.html
@@ -34,7 +34,7 @@
                         </button>
 
                         <!-- Upload button -->
-                        <button type="submit" class="btn btn-primary btn-sm" id="upload-button" onclick="showSpinner();">
+                        <button type="submit" class="btn btn-primary btn-sm" id="upload-button" onclick="showUploadSpinner();">
                             アップロード
                         </button>
 
