--- a/templates/translation_upload.html
+++ b/templates/translation_upload.html
@@ -31,7 +31,7 @@
                         <button type="submit" name="cancel" class="btn btn-secondary btn-sm mx-2">キャンセル</button>
 
                         <!-- Upload button -->
-                        <button type="submit" class="btn btn-primary btn-sm" id="upload-button" onclick="showSpinner();">
+                        <button type="submit" class="btn btn-primary btn-sm" id="upload-button" onclick="showUploadSpinner();">
                             アップロード
                         </button>
 
