Selected removed from resource option dropdown

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -62,7 +62,7 @@
 
                     <!-- Main selections -->
 
-                    <option selected>すべてのリソース</option>
+                    <option>すべてのリソース</option>
                     <option>すべての用語集</option>
                     <option>すべての翻訳</option>
 
