Search icon added to result table cells

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -112,15 +112,16 @@ tr {
     color: #909090;
 }
 
-.clipboard-icon {
+.table-cell-icon {
     text-decoration: none;
     color: #909090;
 }
 
-.clipboard-icon:hover {
+.table-cell-icon:hover {
     color: #e76f51;
     text-decoration: none;
 }
+
 
 /* Hover color for search results table */
 /*
