--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -30,7 +30,7 @@
 
     <div class="flex-grow-1 d-flex">
 
-        <form action="{% url 'search_results' %}" method="get" class="d-flex search-form" >
+        <form action="{% url 'search' %}" method="get" class="d-flex search-form" >
 
             <!-- Search bar
                  The previous query is entered in search field if available.
