Template table cell icon update

--- a/templates/_glossary_content_table.html
+++ b/templates/_glossary_content_table.html
@@ -21,11 +21,8 @@
                     <!-- Source text -->
                     {{ item.source }}
 
-                    <!-- Link to copy source text to clipboard -->
-                    &nbsp
-                    <a href="#" class="clipboard-icon" id="copy-link" onclick="copyText('{{ item.source }}');">
-                        {% include "_table_copy_icon.html" %}
-                    </a>
+                    <!-- Copy to clipboard and search icon links -->
+                    {% include "_table_cell_source_item_icons.html" %}
 
                 </td>
 
@@ -33,19 +30,16 @@
                     <!-- Target text -->
                     {{ item.target }}
 
-                    <!-- Link to copy target text to clipboard -->
-                    &nbsp
-                    <a href="#" class="clipboard-icon" id="copy-link" onclick="copyText('{{ item.target }}');">
-                        {% include "_table_copy_icon.html" %}
-                    </a>
+                    <!-- Copy to clipboard and search icon links -->
+                    {% include "_table_cell_target_item_icons.html" %}
 
-                        <!-- Include notes if present -->
-                        {% if item.notes %}
-                            <br><br>
-                            <div class="table-muted-text">
-                                {{ item.notes|linebreaksbr|urlizetrunc:50 }}
-                            </div>
-                        {% endif %}
+                    <!-- Include notes if present -->
+                    {% if item.notes %}
+                        <br><br>
+                        <div class="table-muted-text">
+                            {{ item.notes|linebreaksbr|urlizetrunc:50 }}
+                        </div>
+                    {% endif %}
                 </td>
 
                 <td class="col-center-align">
