--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -38,15 +38,8 @@
                                     <!-- Source term -->
                                     {{ item.source|highlight_query:query }}
 
-                                    <!-- Link to copy source text to clipboard -->
-                                    <a href="#" class="table-cell-icon ps-2" id="copy-link" onclick="copyText('{{ item.source }}');">
-                                        {% include "_table_copy_icon.html" %}
-                                    </a>
-
-                                    <!-- Link to perform search for this item -->
-                                    <a href="#" class="table-cell-icon ps-1" id="search-link" onclick="searchText('{{ item.source }}');">
-                                        {% include "_table_search_icon.html" %}
-                                    </a>
+                                    <!-- Copy to clipboard and search icon links -->
+                                    {% include "_table_cell_source_item_icons.html" %}
 
                                 {% else %}
                                     <span class="table-muted-text">（原文なし）</span>
@@ -60,15 +53,8 @@
                                     <!-- Target term -->
                                     {{ item.target|highlight_query:query }}
 
-                                    <!-- Link to copy target text to clipboard -->
-                                    <a href="#" class="table-cell-icon ps-2" id="copy-link" onclick="copyText('{{ item.target }}');">
-                                        {% include "_table_copy_icon.html" %}
-                                    </a>
-
-                                    <!-- Link to perform search for this item -->
-                                    <a href="#" class="table-cell-icon ps-1" id="search-link" onclick="searchText('{{ item.target }}');">
-                                        {% include "_table_search_icon.html" %}
-                                    </a>
+                                    <!-- Copy to clipboard and search icon links -->
+                                    {% include "_table_cell_target_item_icons.html" %}
 
                                     <!-- Include notes if present -->
                                     {% if item.notes %}
