--- a/templates/_table_cell_target_item_icons.html
+++ b/templates/_table_cell_target_item_icons.html
@@ -1,9 +1,13 @@
-<!-- Link to copy target text to clipboard -->
-<a href="#" class="table-cell-icon ps-2" id="copy-link" onclick="copyText('{{ item.target }}');">
+<!-- Link to target source text to clipboard.
+     "#0" is used for the href to avoid automatic navigation (scrolling) to
+     the top of the page after the link is clicked. -->
+<a href="#0" class="table-cell-icon ps-2" id="copy-link" onclick="copyText('{{ item.target }}');">
     {% include "_table_copy_icon.html" %}
 </a>
 
-<!-- Link to perform search for this item -->
+<!-- Link to perform search for this item.
+     "#" is used for the href to allow automatic navigation (scrolling) to
+     the top after the link is clicked. -->
 <a href="#" class="table-cell-icon ps-1" id="search-link" onclick="searchText('{{ item.target }}');">
     {% include "_table_search_icon.html" %}
 </a>
