--- a/templates/translation_delete.html
+++ b/templates/translation_delete.html
@@ -18,8 +18,8 @@
 
                     <dt class="col-3">案件番号：</dt>
                     <dd class="col-9">
-                        {% if object.job_number %}
-                            <p>{{ object.job_number }}</p>
+                        {% if object.title %}
+                            <p>{{ object.title }}</p>
                         {% else %}
                             <p>（なし）</p>
                         {% endif %}
