--- a/templates/home.html
+++ b/templates/home.html
@@ -21,57 +21,43 @@
 
             <thead>
                 <tr>
-                    <th scope="col" style="width: 60%">リソース名</th>
+                    <!-- Table column headings -->
+
+                    <!-- Resource title column -->
+                    <th scope="col" style="width: 60%">
+                        リソース名
+                        <!-- Arrow icons -->
+                        <a href=""
+                            class="ps-2"
+                            hx-get="{% url 'home_table_sort' filter='name' direction='ascend' %}"
+                            hx-target="#resource-list"
+                            hx-swap="innerHTML" >
+                            <!-- Up arrow icon -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-square" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 9.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+                            </svg>
+                        </a>
+                        <a href=""
+                            hx-get="{% url 'home_table_sort' filter='name' direction='descend' %}"
+                            hx-target="#resource-list"
+                            hx-swap="innerHTML" >
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                            </svg>
+                        </a>
+                    </th>
+
+                    <!-- Resource type column -->
                     <th scope="col" style="width: 15%">種類</th>
+
+                    <!-- Resource created date column -->
                     <th scope="col" style="width: 25%">作成日時</th>
                 </tr>
             </thead>
 
-            <tbody class="font-15">
+            <tbody class="font-15" id="resource-list">
 
-                {% for object in resources_table_list %}
-
-                    <tr>
-
-                        {% if object.type == "glossary" %}
-
-                            <td class="align-middle">
-                                <a href="{% url 'glossary_detail' object.pk %}">{{ object }}</a>
-                            </td>
-
-                            <td class="align-middle">
-                                用語集
-                            </td>
-
-                        {% elif object.type == "translation" %}
-
-                            <td class="align-middle">
-                                <a href="{% url 'translation_detail' object.pk %}">{{ object }}</a>
-                            </td>
-
-                            <td class="align-middle">
-                                翻訳
-                            </td>
-
-                        {% else %}
-
-                            <td class="align-middle">
-                                {{ object }}
-                            </td>
-
-                            <td class="align-middle">
-                                不明
-                            </td>
-
-                        {% endif %}
-
-                            <td class="align-middle">
-                                {{ object.created_on|date:"d M Y" }}, {{ object.created_on|time:"H:i" }}
-                            </td>
-
-                    </tr>
-
-                {% endfor %}
+                {% include "_home_table_list.html" %}
 
             </tbody>
 
