--- a/templates/translation_detail.html
+++ b/templates/translation_detail.html
@@ -6,7 +6,7 @@
 
         <!-- Translation heading -->
 
-        <h4 class="my-4">{{ object.job_number }}</h4>
+        <h4 class="my-4">{{ object.title }}</h4>
 
         <!-- Translation details table -->
 
